# backend

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
src/: db.sqlite3  pytest.ini
src/arch_example/migrations/: 0001_initial.py
src/arch_example/models/: __init__.py  arch_example.py
src/main/: asgi.py  base_models.py  error_messages.py  settings.py  wsgi.py
src/main/mixins/drf/: view_mixin.py
src/tests/: test_main.py
