[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Eduardo Nuez Wehbe"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
